# dDynamic

./: Makefile  README.md  TODO.md  cabal.project  dDynamic.cabal
.github/workflows/: haskell.yml  webasm.yaml
ex/: a.dt  a0.dt  b.dt  bugs.dt  c.dt  c0.dt  c1.dt  dis0.dt  e.dt  e0.dt  e1.dt  e2.dt  e3.dt  e4.dt  e5.dt  e6.dt  e60.dt  e7.dt  e70.dt  e71.dt  e8.dt  e80.dt  ee.dt  ex0.dt  ex1.dt  liar.dt  nested.dt  sysf.dt  tmp
ex/bugs/: 1.dt  bad_parse_ranges.dt  blank_type_error.dt  bugs.dt  eq.dt  ex1_bad.dt  nontermination.dt  vec.dt
ex/cpp/: data.dt  g.dt  het.dt  sysf.dt  sysf0.dt  sysf1.dt  tmp
src/: AlphaShow.hs  Ast.hs  Env.hs  Eq.hs  Erase.hs  Erasure.hs  Examples.hs  Helper.hs  Main.hs  MonadTransformers.hs  Norm.hs  Parser.hs  ParserMonad.hs  PreludeHelper.hs  PrettyObs.hs  Repl.hs  Scratch.hs  SourcePos.hs  StdLib.hs  Ty.hs  UnboundHelper.hs  Unification.hs
src/Dynamic/: Ast.hs  Clean.hs  Elab.hs  ElabBase.hs  ElabModule.hs  Endpoints.hs  Env.hs  Eq.hs  Erase.hs  Erasure.hs  Err.hs  Ex.hs  Ex1.hs  Ex2.hs  Ex3.hs  Ex4.hs  Ex5.hs  Ex6.hs  Ex7.hs  Ex8.hs  Ex9.hs  Helper.hs  Norm.hs  Norm_bad.hs  Patttern.hs  README.md  Temp.hs  TestEnv.hs  Tmp.hs  Unification.hs  Validate.hs  Visitor.hs  Warn.hs  Warning.hs
src/Ffi/: Ffi.hs  Main.hs
src/SubLang/SimplyTyped/: SimplyTyped.hs
test/: Main.hs  StdLibTest.hs  TestHelper.hs
test/Dynamic/: FunGen.hs  PatternGenBool.hs  WarningTest.hs
test/Elab/: Fun.hs
test/Parser/: Common.hs  Exp.hs  Fun.hs
test/Presentation/: Cast.hs  CastUncleaned.hs  Surface.hs
