cabal-version:        3.4
name:                 dDynamic
version:              0.2.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:
maintainer:
category:
-- copyright:
build-type:           Simple
-- extra-source-files:


library
  exposed-modules: 
    Dynamic.Ast
    , Dynamic.Norm
    , Dynamic.ElabModule
    
    , Dynamic.Elab, Dynamic.Env
    , Dynamic.Erase, Dynamic.Err, Dynamic.Helper
    , Dynamic.Temp
    
    , Repl
    , StdLib

    , MonadTransformers, Ty, Eq, Norm, Ast, Helper, Env
    , ParserMonad, SourcePos
    , Parser

    , UnboundHelper, AlphaShow 
    , PreludeHelper

  ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns

  build-depends:
      containers, mtl,  base 
    , unbound-generics, lens
    , raw-strings-qq
    , haskeline

  hs-source-dirs:     src
  default-language:   Haskell2010


executable repl
  main-is:        Main.hs
  ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  build-depends:
      containers, mtl,  base 
    , unbound-generics, lens
    , raw-strings-qq  
    , haskeline
  hs-source-dirs:     src
  build-depends:
    dDynamic

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
-- Someday move to detailed, if it ever gets supported https://cabal.readthedocs.io/en/latest/cabal-package.html#test-suites
  hs-source-dirs:
    test
  main-is: Main.hs
  other-modules: Parser.Exp, Parser.Fun, Parser.Common, StdLibTest
    , Presentation.Surface, Presentation.Cast
    -- Dynamic.DynamicTest, Dynamic.CCIntegrationTest
  build-depends:
      containers, mtl, base
    , unbound-generics, lens
    , tasty >= 1.3.1, tasty-hunit, tasty-quickcheck
    , QuickCheck
    , dDynamic