cabal-version:        3.8
name:                 dDynamic
version:              0.2.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:
maintainer:
category:
-- copyright:
build-type:           Simple
-- extra-source-files:


library
  exposed-modules: 
    Dynamic.Ast
    , Dynamic.Norm
    , Dynamic.ElabModule
    
    , Dynamic.Elab
    , Dynamic.ElabBase
    , Dynamic.Eq
    , Dynamic.Patttern
    , Dynamic.Visitor
    , Dynamic.Warning
    , Dynamic.Env
    , Dynamic.Erasure
    , Dynamic.Err, Dynamic.Helper
    -- , Dynamic.Temp
    -- , Dynamic.Clean
    , Dynamic.Unification
    -- , Dynamic.Warn
    
    , Repl
    , StdLib

    , MonadTransformers, Ty, Eq, Norm, Ast, Helper, Env
    , ParserMonad, SourcePos
    , Parser
    , Unification
    , Erase

    , UnboundHelper, AlphaShow 
    , PreludeHelper

  ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  -- -interactive-print=PreludeHelper.dPrinter
  -- (pPrintStringOpt CheckColorTty defaultOutputOptionsDarkBg {outputOptionsCompact = True})
  -- -interactive-print=Text.Pretty.Simple.pPrint

  build-depends:
      containers, mtl, base 
    , unbound-generics
    , logict
    , raw-strings-qq
    , haskeline

  hs-source-dirs:     src
  default-language:   Haskell2010

executable Ffi
  main-is:        Ffi/Main.hs
  ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  build-depends:
      containers, mtl, base 
    , unbound-generics
    , logict
    , raw-strings-qq
    , haskeline
    , aeson 
    --, bytestring

  other-modules: Ffi.Ffi
  hs-source-dirs:     src
  other-modules: Dynamic.ElabBase
    , Dynamic.Eq
    , Dynamic.Patttern
    , Dynamic.Visitor
    , Dynamic.Warning
  build-depends:
    dDynamic

-- foreign-library Ffi
--   type:                native-shared
--   -- or is it?
--   ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  
--   other-modules: 
--       Ffi
--   build-depends:
--       containers, mtl, base 
--     , unbound-generics
--     , lens
--     , logict
--     , raw-strings-qq  
--     , haskeline
--     , pretty-simple
--   hs-source-dirs:     src
--   other-modules: Dynamic.ElabBase
--     , Dynamic.Eq
--     , Dynamic.Patttern
--     , Dynamic.Visitor
--     , Dynamic.Warning

--   default-language:
--     Haskell2010

executable repl
  main-is:        Main.hs
  ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  build-depends:
      containers, mtl, base 
    , unbound-generics
    , lens
    , logict
    , raw-strings-qq  
    , haskeline
    , pretty-simple
  hs-source-dirs:     src
  other-modules: Dynamic.ElabBase
    , Dynamic.Eq
    , Dynamic.Patttern
    , Dynamic.Visitor
    , Dynamic.Warning
  build-depends:
    dDynamic


test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
-- Someday move to detailed, if it ever gets supported https://cabal.readthedocs.io/en/latest/cabal-package.html#test-suites
  hs-source-dirs:
    test
  main-is: Main.hs
  other-modules: Parser.Exp, Parser.Fun, Parser.Common, StdLibTest
    , Presentation.Surface, Presentation.CastUncleaned, Presentation.Cast
    -- Dynamic.DynamicTest, Dynamic.CCIntegrationTest
  build-depends:
      containers, mtl, base
    , transformers
    , unbound-generics, lens
    , logict
    , tasty >= 1.3.1, tasty-hunit, tasty-quickcheck
    , QuickCheck
    , dDynamic
    , pretty-simple