cabal-version:        3.8
name:                 dDynamic
version:              0.2.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:
maintainer:
category:
-- copyright:
build-type:           Simple
-- extra-source-files:


library
  exposed-modules: 
    Dynamic.Ast
    , Dynamic.Norm
    , Dynamic.ElabModule
    
    , Dynamic.Elab
    , Dynamic.ElabBase
    , Dynamic.Eq
    , Dynamic.Patttern
    , Dynamic.Visitor
    , Dynamic.Warning
    , Dynamic.Env
    , Dynamic.Erasure
    , Dynamic.Err, Dynamic.Helper
    -- , Dynamic.Temp
    -- , Dynamic.Clean
    , Dynamic.Unification
    -- , Dynamic.Warn
    
    --, Repl
    , StdLib

    , MonadTransformers, Ty, Eq, Norm, Ast, Helper, Env
    , ParserMonad, SourcePos
    , Parser
    , Unification
    , Erase

    , UnboundHelper, AlphaShow 
    , PreludeHelper

  ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  -- -interactive-print=PreludeHelper.dPrinter
  -- (pPrintStringOpt CheckColorTty defaultOutputOptionsDarkBg {outputOptionsCompact = True})
  -- -interactive-print=Text.Pretty.Simple.pPrint

  build-depends:
      containers, mtl, base 
    , unbound-generics
    --, logict
    --, raw-strings-qq
    --, haskeline
    
  hs-source-dirs:     src
  default-language:   Haskell2010

executable Ffi
-- FFI for web assmbly for the web frontend
-- TODO should rename this
  main-is:        Ffi/Main.hs
-- TODO can kill main?
  ghc-options:        -optl-mexec-model=reactor -optl-Wl,--export=hs_init,--export=callocBuffer,--export=freeBuffer,--export=loadStringJson,--export=num,--export=numNum,--export=astr,--export=doublestr,--export=e1
  build-depends:
      containers, mtl, base 
    , unbound-generics
    , aeson >=2.2.0.0 
    , bytestring

  other-modules: Ffi.Ffi
  hs-source-dirs:     src
  other-modules: Dynamic.ElabBase
    , Dynamic.Eq
    , Dynamic.Patttern
    , Dynamic.Visitor
    , Dynamic.Warning
  build-depends:
    dDynamic

-- foreign-library Ffi
--   type:                native-shared
--   -- or is it?
--   ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  
--   other-modules: 
--       Ffi
--   build-depends:
--       containers, mtl, base 
--     , unbound-generics
--     , lens
--     , logict
--     , raw-strings-qq  
--     , haskeline
--     , pretty-simple
--   hs-source-dirs:     src
--   other-modules: Dynamic.ElabBase
--     , Dynamic.Eq
--     , Dynamic.Patttern
--     , Dynamic.Visitor
--     , Dynamic.Warning

--   default-language:
--     Haskell2010
